--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /* Elena Voice - Styles */
 
 /* Fonts */
-/* @import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap'); */
+ @import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap'); 
 /* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');  
+/* @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');   */
 /* CSS Variables */
 :root {
     /* Colors */
@@ -23,10 +23,9 @@
     --card-hover: hsl(0, 0%, 92%);
     
     /* Fonts */
-    /* --font-heading: 'Funnel Display', serif;
-    --font-body: 'Funnel Sans', sans-serif; */
-        --font-heading: 'Playfair Display', serif;
-    --font-body: 'Raleway', sans-serif;
+    --font-heading: 'Funnel Display', serif;
+    --font-body: 'Funnel Sans', sans-serif;
+
     /* Spacing */
     --radius: 0.75rem;
 }
