--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ a {
 }
 
 .hero-text {
-    font-size: clamp(2rem, 4.25vw, 3.5rem);
+    font-size: clamp(1.85rem, 4.25vw, 3.5rem);
     font-family: var(--font-heading);
     color: var(--foreground);
     margin-bottom: 2rem;
@@ -441,7 +441,7 @@ a {
 
 .contact-heading {
     font-family: var(--font-heading);
-    font-size: clamp(1.875rem, 4vw, 2.25rem);
+    font-size: clamp(1.575rem, 4vw, 2.25rem);
     color: var(--foreground);
     margin-bottom: 1.5rem;
 }
@@ -665,6 +665,14 @@ a {
 
 
 @media (max-width: 767px) {
+    .hero-section {
+    padding: 7rem 1.5rem 3rem;
+    min-height: auto;
+
+}
+.audio-card {
+    padding: .5rem;}
+    .audio-card-content {padding:.5rem}
     .nav-links {
         gap: 1rem;
     }
@@ -672,4 +680,27 @@ a {
     .audio-grid {
         grid-template-columns: 1fr;
     }
+    .samples-section {
+  padding: 6rem 1.5rem;
+}
+.about-section {
+    padding: 3rem 1.5rem;
+}
+.about-grid {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 2rem;
+}
+.contact-section {
+    padding: 6rem 1.5rem;}
+
+.about-image {
+    float: none;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    margin-left: 0;
+    margin-bottom: 0;
+    border-radius: 0;
+}
 }
